<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:divider="@drawable/divider_line"
    android:showDividers="middle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/male"
        android:background="@drawable/selector_bg_item_white_gray"
        android:textColor="@color/menuColor"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/male"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/female"
        android:background="@drawable/selector_bg_item_white_gray"
        android:textColor="@color/menuColor"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/female"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/cancel"
        android:background="@drawable/selector_bg_item_white_gray"
        android:textColor="@color/menuColor"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

</LinearLayout>