<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_scrollFlags="scroll|enterAlways">

    <android.support.v7.widget.Toolbar
        android:id="@+id/base_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:id="@+id/toolbar_back"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="12dp"
            android:background="@drawable/ab_btn_selector"
            android:scaleType="center"
            android:src="@drawable/ic_back"
            android:paddingStart="8dp"
            android:paddingEnd="12dp" />

        <TextView
            android:id="@+id/select_all"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:text="@string/select_all"
            android:textColor="#fefefe"
            android:textSize="13sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center"
            android:layout_marginLeft="48dp"
            android:gravity="center"
            android:text="@string/notice"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="right"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding_12"
            android:paddingRight="@dimen/padding_14"
            android:text="@string/edit"
            android:textColor="#fefefe"
            android:textSize="13sp"

            />
    </android.support.v7.widget.Toolbar>
</LinearLayout>